@@ -8,7 +8,7 @@
 #cmakedefine HAVE_STRING_H
 
 /* Define if you have the <strings.h> header file.  */
-#cmakedefine HAVE_STRING_H
+#cmakedefine HAVE_STRINGS_H
 
 #cmakedefine GEO_NORMALIZE_DISABLE_TOWGS84
 
