@@ -1,3 +1,6 @@
+2016-08-16 Even Rouault <even dot rouault at spatialys dot com>
+    * Fix warning about strcasecmp not found in -std=c99/cmake build
+
 2016-01-13 Even Rouault <even dot rouault at spatialys dot com>
     * Upgrade to EPSG database v8.8
 
